
2009-09-15  Ivan Maidanski <ivmai@mail.ru>
	(ivmai137v2.diff)

	* include/private/gc_priv.h (MAX_HEAP_SECTS): Guard with ifndef.

2009-09-14  Ivan Maidanski <ivmai@mail.ru>
	(ivmai136v2.diff)

	* Makefile.direct: Copy missing information for -DSHORT_DBG_HDRS
	from Makefile.
	* Makefile: Remove the information about "define arguments" (which
	is incomplete and outdated compared to that in Makefile.direct);
	add help reference to Makefile.direct.
	* Makefile.dj: Ditto.

2009-09-14  Ivan Maidanski <ivmai@mail.ru>
	(ivmai135.diff)

	* alloc.c (world_stopped_total_time, world_stopped_total_divisor):
	Replace "STATIC" with "static" in the definition (since the
	symbols aren't prefixed with "GC_").
	* win32_threads.c (marker_sp, marker_bsp, marker_last_stack_min,
	start_mark_threads, mark_mutex, builder_cv, mark_cv,
	mark_mutex_event, signalObjectAndWait_func, main_thread_start):
	Ditto.
	* pthread_support.c (GC_wait_builder): Define as STATIC.
	* win32_threads.c (GC_wait_builder): Ditto.

2009-09-14  Ivan Maidanski <ivmai@mail.ru>
	(ivmai133.diff)

	* misc.c (GC_get_heap_size_inner, GC_get_free_bytes_inner): New
	API function.
	* include/gc_pmark.h (GC_get_heap_size_inner,
	GC_get_free_bytes_inner): New function declaration.

2009-09-10  Ivan Maidanski <ivmai@mail.ru>
	(ivmai121.diff)

	* include/gc.h: Recognize __CEGCC__ (as a synonym for _WIN32_WCE).
	* include/gc_config_macros.h: Ditto.
	* include/gc.h (GC_MAXIMUM_HEAP_SIZE): Recognize new macro.
	* include/gc.h (GC_INIT_CONF_MAXIMUM_HEAP_SIZE): New macro (for
	internal use).
	* include/gc_config_macros.h: Always include stddef.h if GCC.
	* include/gc_config_macros.h (GC_API): Define for CeGCC in the
	same way as for MinGW.
	* include/gc_config_macros.h (GC_API): Group the definition for
	all cases together (check for GC_DLL only once).
	* include/gc_pthread_redirects.h: Group non-Darwin code together.
	* tests/test.c: Recognize GC_PRINT_VERBOSE_STATS (only if GC_DLL).

2009-09-10  Ivan Maidanski <ivmai@mail.ru>